CS_PROD_20150209_01/Metadata/unpackaged/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Billing_Terms__c</fullName>
        <description>Created by LM on 11/22/2013 for Phase 2 rollout</description>
        <label>Billing Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Don_t_Create_Renewal_Opp__c</fullName>
        <formula>SBQQ__Quote__r.Don_t_Create_Renewal_Opp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Don&apos;t Create Renewal Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>Created by LM on 11/22/2013 for Phase 2 rollout</description>
        <label>Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_O_Number__c</fullName>
        <description>Created by LM on 11/22/2013 for Phase 2 rollout</description>
        <label>P.O. Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Number__c</fullName>
        <description>Created by LM on 11/22/2013 for Phase 2 rollout</description>
        <label>Production Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ActiveContract__c</fullName>
        <description>Determines if this contract is in effect.</description>
        <formula>IF(AND(ISPICKVAL(StatusCode,&apos;Activated&apos;),EndDate &gt; TODAY()),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines if this contract is in effect.</inlineHelpText>
        <label>Active Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalContactRoles__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag that indicates whether contact roles from the original opportunity should carry over to renewal opportunity.</description>
        <inlineHelpText>Check to carry over contact roles from original to renewal opportunity.</inlineHelpText>
        <label>Default Renewal Contact Roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalPartners__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag that indicates whether partners from the original opportunity should carry over to renewal opportunity.</description>
        <inlineHelpText>Check to carry over partners from original to renewal opportunity.</inlineHelpText>
        <label>Default Renewal Partners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <formula>EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract end date for use in time-based workflows</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__MasterContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates this contract as the master contract for this account. Upon renewal all contracts will be rolled into this contract.</description>
        <inlineHelpText>Designates this contract as the master contract for this account. Upon renewal all contracts will be rolled into this contract.</inlineHelpText>
        <label>Master Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote that generated this contract.</description>
        <inlineHelpText>Quote that generated this contract.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalForecast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers generation of renewal opportunity (no quote) for forecasting purposes.</description>
        <inlineHelpText>Triggers generation of renewal opportunity (no quote) for forecasting purposes.</inlineHelpText>
        <label>Renewal Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityRecordTypeId__c</fullName>
        <description>Record type of renewal opportunity generated from this contract. Null value won&apos;t attempt to set record type.</description>
        <inlineHelpText>Record type of renewal opportunity if different than the default.</inlineHelpText>
        <label>Renewal Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityStage__c</fullName>
        <description>Stage of auto generated renewal opportunities.</description>
        <inlineHelpText>Default stage of renewal opportunity generated from this contract.</inlineHelpText>
        <label>Renewal Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renewal opportunity generated to track the renewal of this contract.</description>
        <inlineHelpText>Renewal opportunity generated to track the renewal of this contract.</inlineHelpText>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Contracts</relationshipLabel>
        <relationshipName>RenewedContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who should own the renewal opportunity.</description>
        <inlineHelpText>User who should own the renewal opportunity.</inlineHelpText>
        <label>Renewal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RenewalContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricebookId__c</fullName>
        <description>ID of price book to use when renewing this contract.</description>
        <inlineHelpText>ID of price book to use when renewing this contract.</inlineHelpText>
        <label>Renewal Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalQuoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Term of the renewal, which defaults to the original contract term.</description>
        <inlineHelpText>Term of the renewal, which defaults to the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STX_Contract_End_Date__c</fullName>
        <label>STX Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>STX_Contract_Number__c</fullName>
        <description>Created by LM on 11/22/2013 for Phase 2 rollout</description>
        <externalId>true</externalId>
        <label>STX Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STX_Contract_Start_Date__c</fullName>
        <label>STX Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 11/22/2013 for Phase 2 rollout</description>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Show_Id__c</fullName>
        <formula>Id &amp; 
MID( 
    &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
    MIN(FIND(MID(Id, 5, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
    MIN(FIND(MID(Id, 4, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
    MIN(FIND(MID(Id, 3, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
    MIN(FIND(MID(Id, 2, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
    MIN(FIND(MID(Id, 1, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
    1) &amp; 
MID( 
    &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
    MIN(FIND(MID(Id, 10, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
    MIN(FIND(MID(Id, 9, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
    MIN(FIND(MID(Id, 8, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
    MIN(FIND(MID(Id, 7, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
    MIN(FIND(MID(Id, 6, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
    1) &amp; 
MID( 
    &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
    MIN(FIND(MID(Id, 15, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
    MIN(FIND(MID(Id, 14, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
    MIN(FIND(MID(Id, 13, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
    MIN(FIND(MID(Id, 12, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
    MIN(FIND(MID(Id, 11, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
    1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Account__c</fullName>
        <description>Created by LM on 6/27/2014 for Renee</description>
        <label>Sub Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>STX_Contract_Number__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.LAST_UPDATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTRACT.CREATED_DATE</columns>
        <columns>SBQQ__RenewalOpportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>Contracts_Created_Today</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.LAST_UPDATE</columns>
        <columns>STX_Contract_Number__c</columns>
        <columns>SBQQ__Opportunity__c</columns>
        <columns>SBQQ__Quote__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTRACT.CREATED_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>SBQQ__RenewalOpportunityRecordTypeId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>12/22/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>STX_Contract_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Contracts Created Today</label>
        <sharedTo>
            <role>Billing</role>
            <role>Contract_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>